fixed spacing for Jo's Reactions and contact form and navbar styling

--- a/src/Components/HowJoWorks/howjoworks.css
+++ b/src/Components/HowJoWorks/howjoworks.css
@@ -6,7 +6,7 @@
     background-color: transparent !important;
 }
 .addPadding{
-    padding: 5rem 2rem;
+    padding: 3rem 2rem;
 }
 .howjoworksheading {
     color: #4277DE;
@@ -17,7 +17,7 @@
     width: 23rem;
     text-align: center;
     position: absolute;
-    left: 15vh;
+    left: 20vh;
 }
 .centered {
     display: block;
